@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.3.9) unstable; urgency=low
 
   * http-client: assume keep-alive is enabled on HTTP 1.1
+  * processor: use configured/session path-info for mode=child URIs
 
  --
 
